# sketches

./: .clang-format  .gitignore  .gitmodules  README.md
2021-02-10/src/: main.cpp  ofApp.cpp  ofApp.h
basic_fragment_shaders/: basic_fragment_shaders.sln  basic_fragment_shaders.vcxproj
fractals/: Cargo.toml
fractals/src/: main.rs  mandelbrot.rs
halloween/: CMakeLists.txt  Makefile  toolchain.cmake
halloween/config/: config.json
halloween/graphics/fonts/: README.md
halloween/modules/: CMakeLists.txt
halloween/source/: animation.cpp  animation.hpp  character.cpp  character.hpp  config_parser.cpp  config_parser.hpp  expected.hpp  font.cpp  font.hpp  font_renderer.cpp  font_renderer.hpp  graphics.hpp  main.cpp  primatives.cpp  primatives.hpp  scrolling_font_renderer.cpp  scrolling_font_renderer.hpp  string_utilities.hpp
ripples/: README.md  ripples.sln  ripples.vcxproj
ripples/shaders/shadersGL3/: shader.vert
ripples/src/: main.cpp  ofApp.cpp  ofApp.h  ripple.hpp
wireframe-conway/: wireframe-conway.sln  wireframe-conway.vcxproj  wireframe-conway.vcxproj.filters
wireframe-conway/shaders/shadersGL3/: shader.frag
wireframe-conway/src/: conway.h  main.cpp  ofApp.cpp  ofApp.h
wireframes/: 2021-02-10.sln  2021-02-10.vcxproj  2021-02-10.vcxproj.filters
wireframes/src/: ofApp.cpp  ofApp.h
