[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
crossbeam = "0.8"
rayon = "1"
pixel-canvas= {git = "https://github.com/graham-riches/pixel-canvas.git", branch = "develop"}
glium="*"
scarlet="*"
